# Stock-MCP-Server

./: .env.example  .gitignore  README.md  pyproject.toml
config/: codex.mcp.toml.example  positions.yaml  watchlist.yaml
src/stock_mcp/: __init__.py  config_loader.py  models.py  server.py  settings.py
src/stock_mcp/providers/: __init__.py  akshare_provider.py  csv_provider.py
src/stock_mcp/services/: __init__.py  daily_plan_service.py  indicator_service.py  kline_service.py  quote_service.py  wyckoff_service.py
src/stock_mcp/tools/: __init__.py  indicator_tools.py  kline_tools.py  plan_tools.py  quote_tools.py
src/stock_mcp/utils/: __init__.py  symbol.py  time.py
tests/: test_akshare_provider.py  test_config_loader.py  test_csv_provider.py  test_services.py  test_settings.py  test_symbol.py
